# tree-sitter-icelang

./: Cargo.toml  README.md  binding.gyp  grammar.js  package-lock.json  package.json
.github/workflows/: ci.yml  node.js.yml  publish.yml
bindings/node/: binding.cc  index.js
bindings/rust/: lib.rs
queries/: highlights.scm
queries/icelang/: folds.scm  highlights.scm  indents.scm
queries/neovim/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: expression.txt  statement.txt
test/highlight/: basics.ic  function.ic
