[package]
name = "tree-sitter-icelang"
description = "icelang grammar for the tree-sitter parsing library"
version = "0.1.6"
authors = ["LIOKA Ranarison Fiderana <luckasranarison@gmail.com>"]
keywords = ["incremental", "parsing", "icelang"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/luckasRanarison/tree-sitter-icelang"
edition = "2018"
license = "MIT"
readme = "README.md"

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.3"

[build-dependencies]
cc = "1.0"
